// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render right thing and don't change unexpected 1`] = `
<button
  className="btn btn-secondary"
  type="submit"
>
  <span />
</button>
`;

exports[`should render right thing and don't change unexpected when loading state 1`] = `
<button
  className="btn btn-secondary btn--loading"
  type="submit"
>
  <i
    className="icon-spinner icon--loading"
  />
  <span />
</button>
`;
